<resources>
    <string name="app_name">Interval</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameStr">Username</string>
    <string name="passwordString">Password</string>
    <string name="noAccountStr">No account? Create one here</string>
    <string name="signupStr">Sign up</string>
    <string name="loginStr">Log in</string>
    <string name="confirmPass">Confirm Password</string>
</resources>