<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signupUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/usernameStr"
            android:inputType="text"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="269dp" />

        <EditText
            android:id="@+id/signupPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/passwordString"
            android:inputType="text"
            android:password="true"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="334dp" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#322F2F"
            android:text="@string/signupStr"
            app:cornerRadius="5dp"
            tools:layout_editor_absoluteX="157dp"
            tools:layout_editor_absoluteY="453dp" />

        <EditText
            android:id="@+id/signupConfirmPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/confirmPass"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="393dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>