<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="23dp"
            android:ems="10"
            android:hint="@string/passwordString"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/loginUsername"
            app:layout_constraintTop_toBottomOf="@+id/loginUsername" />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="256dp"
            android:ems="10"
            android:hint="@string/usernameStr"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="#322F2F"
            android:text="@string/loginStr"
            android:textColorHighlight="#3C2C2C"
            android:textColorLink="#493D3D"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginPassword" />

        <TextView
            android:id="@+id/loginNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="22dp"
            android:text="@string/noAccountStr"
            app:layout_constraintBaseline_toBaselineOf="@+id/loginToSignupButton"
            app:layout_constraintEnd_toStartOf="@+id/loginToSignupButton"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/loginToSignupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="151dp"
            android:backgroundTint="#322F2F"
            android:text="@string/signupStr"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loginNoAccount" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>